--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "oauth",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start2": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "google-auth-library": "^10.1.0",
-    "morgan": "~1.9.1",
-    "googleapis": "^150.0.1",
+    "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
+    "express": "~4.16.1",
+    "google-auth-library": "^8.8.0",
     "http-errors": "~1.6.3",
-    "debug": "~2.6.9"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   }
 }
