--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-session": "^1.18.1",
     "google-auth-library": "^8.8.0",
     "http-errors": "~1.6.3",
+    "keycloak-connect": "^26.1.1",
     "morgan": "~1.9.1",
     "pug": "^3.0.2"
   }
