--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   backend:
+    image: registry.infres.fr/backend
     build: ./backend
     ports:
       - "3000:3000"
@@ -12,6 +13,7 @@ services:
     restart: unless-stopped
 
   frontend:
+    image: registry.infres.fr/frontend
     build: ./frontend
     ports:
       - "5173:5173"
